--- a/MyMvc4.csproj
+++ b/MyMvc4.csproj
@@ -198,16 +198,31 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="gohome.html" />
+    <Content Include="H5.html" />
     <Content Include="Images\car.png" />
+    <Content Include="My97DatePicker\calendar.js" />
+    <Content Include="My97DatePicker\lang\en.js" />
+    <Content Include="My97DatePicker\lang\zh-cn.js" />
+    <Content Include="My97DatePicker\lang\zh-tw.js" />
+    <Content Include="My97DatePicker\skin\datePicker.gif" />
+    <Content Include="My97DatePicker\skin\default\datepicker.css" />
+    <Content Include="My97DatePicker\skin\default\img.gif" />
+    <Content Include="My97DatePicker\skin\WdatePicker.css" />
+    <Content Include="My97DatePicker\skin\whyGreen\bg.jpg" />
+    <Content Include="My97DatePicker\skin\whyGreen\datepicker.css" />
+    <Content Include="My97DatePicker\skin\whyGreen\img.gif" />
+    <Content Include="My97DatePicker\WdatePicker.js" />
     <Content Include="passenger.html" />
     <Content Include="test.html" />
     <Content Include="实时位置.html" />
     <Content Include="说明FTP.html" />
+    <Content Include="go.html" />
     <Content Include="路线规划.html" />
     <Content Include="轨迹回放.html" />
     <Content Include="轨迹回放LBS.html" />
     <Content Include="轨迹展示&amp;巡航.html" />
     <Content Include="轨迹巡航控制.html" />
+    <None Include="Properties\PublishProfiles\local.pubxml" />
     <None Include="Properties\PublishProfiles\w.pubxml" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
@@ -254,6 +269,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Js\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
